--- a/src/components/Login/Login.module.css
+++ b/src/components/Login/Login.module.css
@@ -3,7 +3,19 @@
   border: 2rem solid #fff;
   width: 90vw;
   margin: 10rem auto 5rem;
-  height: 100vh;
+  height: fit-content;
+  padding: 5rem 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#borderTwo {
+  background-color: #f9fafb;
+  border: 2rem solid #fff;
+  width: 90vw;
+  margin: 10rem auto 5rem;
+  height: fit-content;
   display: flex;
   flex-direction: column;
   justify-content: center;
