--- a/src/components/AdminPanel/AddArticle.module.css
+++ b/src/components/AdminPanel/AddArticle.module.css
@@ -337,3 +337,33 @@
   padding: 1rem 0;
   flex-wrap: wrap;
 }
+#commentsAllowed {
+  text-align: left;
+  padding-left: 1rem;
+  display: flex;
+}
+#commentBundle {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 1rem;
+  margin-top: 0.2rem;
+}
+#commentsAllowed h3 {
+  font-size: 1.4rem;
+  font-weight: 600;
+}
+.commentItem {
+  display: flex;
+  margin-right: 0.5rem;
+  font-size: 1.2rem;
+}
+.commentItem input {
+  transform: translateY(10%);
+}
+.commentItem label {
+  margin-right: 0.4rem;
+}
+#subcategory {
+  margin-top: 1rem;
+}
