--- a/src/components/AdminPanel/AddArticle.module.css
+++ b/src/components/AdminPanel/AddArticle.module.css
@@ -88,23 +88,47 @@
   border: 0.1rem solid #e5e7eb;
 }
 #addTextBodyHeader ul li:nth-of-type(1) {
-  padding: 0.5rem 0.915rem;
+  padding: 0.5rem 1.2rem;
   transition: background-color 0.2s ease-in-out;
 }
 #addTextBodyHeader ul li:nth-of-type(1):hover,
 #addTextBodyHeader ul li:nth-of-type(2):hover,
-#addTextBodyHeader ul li:nth-of-type(3):hover {
+#addTextBodyHeader ul li:nth-of-type(3):hover,
+#addTextBodyHeader ul li:nth-of-type(4):hover {
   background-color: rgba(63, 135, 229, 0.5);
 }
 #addTextBodyHeader ul li:nth-of-type(2) {
-  padding: 0.3rem 0.52rem;
+  padding: 0.3rem 0.9rem;
   display: flex;
   justify-content: center;
   align-items: center;
   transition: background-color 0.2s ease-in-out;
+  position: relative;
 }
+#listOl {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  bottom: -100%;
+  left: 0;
+  background-color: #f8fafb;
+  border: 0.1rem solid #e5e7eb;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.8rem;
+}
+
 #addTextBodyHeader ul li:nth-of-type(3) {
   padding: 0.3rem 0.7rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #3f87e5;
+  transition: background-color 0.2s ease-in-out;
+}
+#addTextBodyHeader ul li:nth-of-type(4) {
+  padding: 0.3rem 0.9rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -186,7 +210,7 @@
   display: flex;
 }
 
-#uploadImage input[type='file'] {
+#uploadImage input[type="file"] {
   display: none;
   width: 50%;
 }
@@ -222,7 +246,7 @@
   justify-content: center;
   align-items: center;
 }
-#imageCaption input {
+#imageCaption textarea {
   background-color: #fff;
   border-radius: 0.4rem;
   width: 100%;
@@ -230,7 +254,7 @@
   padding: 1rem;
   border: 0.1rem solid #d8dee4;
 }
-#imageCaption input:focus {
+#imageCaption textarea:focus {
   border: 0.1rem solid #3f87e5;
 }
 #author {
