--- a/src/components/HomeMain/HomeMain.module.css
+++ b/src/components/HomeMain/HomeMain.module.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@200&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@200&display=swap");
 
 #homeMain {
   margin: auto;
@@ -41,8 +41,17 @@
 }
 
 .mainBox .mainBoxHeader h3 {
-  font-size: 1.6rem;
+  font-size: 1.5rem;
+  font-weight: 600;
   color: #111827;
+}
+.mainBox .mainBoxHeader h3 a {
+  text-decoration: none;
+  color: inherit;
+}
+.mainBox .mainBoxHeader h3:nth-of-type(1) {
+  font-size: 1.12rem;
+  margin-top: 0.5rem;
 }
 
 .mainBox .mainBoxFooter {
@@ -83,6 +92,15 @@
   left: 1.6rem;
 }
 
+.mainBoxBig .mainBoxHeader h3:nth-of-type(1) {
+  font-size: 1.3rem;
+}
+
+.mainBoxBig .mainBoxHeader h3:nth-of-type(2) a {
+  text-decoration: none;
+  color: inherit;
+}
+
 .mainBoxBig {
   color: #fff;
 }
@@ -108,9 +126,10 @@
 
 .mainBoxBig .mainBoxHeader {
   position: absolute;
-  bottom: 20%;
+  bottom: 16%;
   z-index: 2;
   font-size: 1.5rem;
+  width: 93%;
   text-align: left;
 }
 
@@ -128,7 +147,7 @@
 }
 .mainBoxBig .mainBoxFooter .mainBoxFooterBundle span i {
   margin-right: 0.5rem;
-  font-size: 1.3rem;
+  font-size: 1rem;
 }
 
 .mainBoxImg img {
