--- a/src/components/comment/Comment.module.css
+++ b/src/components/comment/Comment.module.css
@@ -1,9 +1,233 @@
+#commentPageContainer {
+  width: 128rem;
+  background-color: #fff;
+  margin: 6.5rem auto;
+  margin-bottom: 4rem;
+  padding: 1.5rem 2rem;
+  border: 0.1rem solid #e5e7eb;
+  height: fit-content;
+}
+#commentPageContainerHeader {
+  text-align: left;
+  padding-bottom: 2rem;
+  border-bottom: 0.1rem solid #e5e7eb;
+  display: flex;
+}
+#headerBundle h1 {
+  display: inline;
+  transition: color 0.1s ease-in;
+}
+#headerBundle h1 a {
+  text-decoration: none;
+  color: inherit;
+}
+#headerBundle h1:hover {
+  cursor: pointer;
+  width: fit-content;
+  color: rgba(75, 85, 99, 1);
+}
+#commentPageContainerHeader h3 {
+  font-size: 1.7rem;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+#commentPageContainerHeader h1 {
+  font-size: 3.5rem;
+  font-weight: 600;
+}
+
+#headerShares {
+  display: flex;
+  justify-content: center;
+  align-items: top;
+  text-align: center;
+  font-size: 1.7rem;
+  color: #6b7280;
+}
+
+#headerShares i {
+  margin-right: 0.5rem;
+  font-size: 1.5rem;
+  margin-top: 0.4rem;
+}
+
+#commentPageContainerBody {
+  display: grid;
+  grid-template-columns: 17% 56% 27%;
+  height: 100%;
+  margin-top: 2rem;
+}
+
+#commentSidebarLeft {
+  grid-column: 1/2;
+  display: flex;
+  flex-direction: column;
+}
+
+#bundleDiv {
+  height: fit-content;
+}
+
+#postedData {
+  display: flex;
+}
+
+#postedDataTwo {
+  text-align: left;
+  margin-left: 1.2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+#postedDataTwo h3 {
+  font-weight: 600;
+  font-size: 1.3rem;
+  color: #333;
+}
+
+#postedDataTwo p {
+  font-size: 1.3rem;
+  color: rgba(107, 114, 128, 1);
+}
+
+#commentsShare {
+  padding: 2rem 0;
+  display: flex;
+  justify-content: space-around;
+  padding-right: 1.5rem;
+}
+
 .postCommentTextarea {
   min-height: 12.9rem;
   width: 100%;
   resize: vertical;
   padding: 1rem;
   border: 0.1rem solid #cdcfd1;
+}
+
+#commentsShare h2 {
+  font-size: 2.7rem;
+  font-weight: 600;
+}
+
+#commentsShare p {
+  color: rgba(107, 114, 128, 1);
+  font-size: 1.5rem;
+}
+
+#shareArticle {
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 0.1rem solid #cdcfd1;
+  padding: 1rem 2rem;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin-right: auto;
+}
+
+#shareArticle ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#shareArticle ul li {
+  margin-right: 2rem;
+  cursor: pointer;
+}
+
+#shareArticle ul li:last-of-type {
+  margin-right: 0px;
+}
+
+#shareArticle ul li i {
+  font-size: 2rem;
+  color: #9ca3af;
+}
+
+#commentBodyContent {
+  background-color: #f3f4f6;
+  padding: 1.2rem 1.8rem;
+}
+
+#commentBodyHeaderInfo {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1.5rem;
+}
+
+#commentBodyHeaderInfo h3 {
+  font-size: 1.7rem;
+  font-weight: 500;
+}
+
+#povratakNaClanak {
+  font-size: 1.4rem;
+  color: rgba(107, 114, 128, 1);
+  font-weight: 700;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#povratakNaClanak a {
+  text-decoration: none;
+  color: inherit;
+}
+
+#povratakNaClanak:hover {
+  color: rgba(75, 85, 99, 1);
+}
+
+#povratakNaClanak i {
+  margin-right: 0.5rem;
+  font-size: 1.7rem;
+  transform: translateY(10%);
+}
+
+#prijavaKorisnika {
+  width: 100%;
+  background-color: #fff;
+  padding: 1rem 2rem;
+  margin-top: 1.5rem;
+  font-size: 1.4rem;
+  font-weight: 600;
+  cursor: pointer;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+  border-radius: 0.5rem;
+}
+#commentBodyHeaderTypeSignIn a {
+  text-decoration: none;
+  color: inherit;
+}
+#prijavaKorisnika:hover {
+  background-color: #f9fafb;
+}
+
+#commentBodyHeaderAlert {
+  display: flex;
+  text-align: left;
+  margin: 1.5rem 0;
+}
+
+#commentBodyHeaderAlert span {
+  font-size: 1.4rem;
+  font-weight: bolder;
+  color: rgba(107, 114, 128, 1);
+}
+#commentBodyHeaderAlert a {
+  color: rgba(107, 114, 128, 1);
+  font-size: 1.3rem;
+  cursor: pointer;
+  margin-top: 0.1rem;
+}
+
+#commentBodyHeaderAlert a:hover {
+  text-decoration: underline;
 }
 
 .postCommentTextarea:focus {
@@ -28,4 +252,9 @@
 }
 .postCommentBundle button span i {
   color: #333;
+}
+
+#commentBody {
+  display: flex;
+  flex-direction: column;
 }
