--- a/src/components/Overlay/Overlay.module.css
+++ b/src/components/Overlay/Overlay.module.css
@@ -5,6 +5,7 @@
   left: 0;
   top: 0;
   background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(107, 114, 128, 0.7);
   z-index: 999;
   height: 100%;
 }
