--- a/src/components/AdminPanel/EditArticle/EditArticle.module.css
+++ b/src/components/AdminPanel/EditArticle/EditArticle.module.css
@@ -10,13 +10,18 @@
 #allArticlesMainBodyContent {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(2, 25vh);
+  grid-template-rows: repeat(2, 50%);
   width: 70%;
-  height: 50vh;
+  height: fit-content;
+  height: 70vh;
   margin: auto;
   gap: 0.1rem;
   /* background-color: #fff; */
   margin-top: 3rem;
+}
+.articleTitles {
+  overflow: hidden;
+  flex-grow: 1;
 }
 .articleItemSm {
   grid-column: span 1;
@@ -71,8 +76,12 @@
   text-overflow: ellipsis;
   overflow: scroll;
   height: 5rem;
+  height: 100%;
 }
-.articleTitles h3:nth-of-type(2)::-webkit-scrollbar {
+.articleTitles h3:nth-of-type(2)::-webkit-scrollbar,
+.articleItemFetchTitles h3:nth-of-type(2)::-webkit-scrollbar,
+.editBundler::-webkit-scrollbar,
+.addingBundler::-webkit-scrollbar {
   display: none;
 }
 .articleFooter {
@@ -309,6 +318,7 @@
 }
 #allArticlesItems {
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
   border: 0.1rem solid #e5e7eb;
   margin-top: 2rem;
@@ -316,23 +326,31 @@
 }
 .articleFetchItem {
   border: 0.1rem solid #e5e7eb;
-  padding: 1rem;
+  padding: 0.8rem;
   margin-right: 1rem;
   text-align: left;
   width: 10rem;
   cursor: pointer;
   margin-top: 1rem;
   height: fit-content;
+  height: 20rem;
+  display: flex;
 }
 .articleFetchItem a {
   text-decoration: none;
   color: inherit;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 100%;
 }
 .articleFetchItemImgCnt {
   width: 100%;
+  height: 30%;
 }
 .articleFetchItemImgCnt img {
   width: 100%;
+  height: 100%;
 }
 .articleItemFetchFooter {
   display: flex;
@@ -348,6 +366,21 @@
 }
 .articleItemFetchTitles {
   font-size: 0.9rem;
+  /* overflow-y: hidden; */
+  /* text-overflow: ellipsis; */
+}
+.editBundler,
+.addingBundler {
+  flex-grow: 1;
+  overflow-y: scroll;
+}
+.addingBundler {
+  margin-bottom: 0.5rem;
+}
+.articleItemFetchTitles h3:nth-of-type(2) {
+  text-overflow: ellipsis;
+  overflow: scroll;
+  height: 100%;
 }
 #fetchBtn {
   cursor: pointer;
@@ -357,6 +390,12 @@
 }
 .articleItemFetchTitles h3 {
   font-weight: 500;
+}
+.articleItemFetchTitles h3:nth-of-type(1) {
+  font-size: 1rem;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  font-weight: 700;
 }
 #saveChanges {
   margin-top: 1rem;
