--- a/src/components/Article/Article.module.css
+++ b/src/components/Article/Article.module.css
@@ -14,7 +14,7 @@
 }
 #articleHeader h3 {
   font-size: 1.7rem;
-  font-weight: 700;
+  font-weight: 600;
   text-transform: uppercase;
 }
 #articleHeader h1 {
@@ -62,8 +62,8 @@
   justify-content: space-between;
 }
 #postedDataTwo h3 {
-  font-weight: 600;
-  font-size: 1.3rem;
+  font-weight: 400;
+  font-size: 1.4rem;
   color: #333;
 }
 #postedDataTwo p {
@@ -142,6 +142,10 @@
   color: rgba(55, 65, 81, 1);
   border-radius: 0.5rem;
   margin-top: 1rem;
+  transition: background-color 0.1s ease-in;
+}
+#tags span:hover {
+  background-color: #d1d5db;
 }
 #tags {
   margin-top: 0.5rem;
@@ -187,8 +191,10 @@
 }
 #linkedArticlesBody {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 1rem;
+  grid-template-columns: repeat(3, minmax(30%, 1fr));
+  border-bottom: 0.1rem solid #e5e7eb;
+  padding-bottom: 0.5rem;
+  gap: 1.5rem;
 }
 #linkedArticlesHeader {
   display: flex;
@@ -270,18 +276,21 @@ iframe {
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: fit-content;
   height: fit-content;
+  max-height: 11rem;
   grid-column-gap: 0.5rem;
   overflow: hidden;
 }
 
 #sliderImages img {
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
+  max-height: inherit;
   cursor: pointer;
 }
 
 #clickForMore {
   position: relative;
+  max-height: inherit;
 }
 
 #clickForMore span {
@@ -414,6 +423,8 @@ iframe {
 }
 #articleText p {
   width: 67ch;
+  line-height: 1.75;
+  color: #333;
 }
 #articleText ul,
 #articleText ol {
@@ -447,4 +458,12 @@ iframe {
 #articleText ol li::marker {
   color: #6b7280;
   font-weight: 400;
+}
+.ytConfig {
+  min-height: 40rem;
+  display: flex;
+  flex-direction: column;
+}
+.ytConfig iframe {
+  flex-grow: 1;
 }
