--- a/src/components/Article/LinkedArticles.module.css
+++ b/src/components/Article/LinkedArticles.module.css
@@ -1,21 +1,61 @@
 .imageContainer img {
   width: 100%;
   cursor: pointer;
+  height: 100%;
+}
+.imageContainer {
+  max-height: 10.5rem;
 }
 .linkedArticle {
+  grid-column: auto;
   text-align: left;
+  display: flex;
+  flex-direction: column;
+  position: relative;
 }
-.linkedArticle h3:nth-of-type(2) {
-  cursor: pointer;
-  font-size: 1.4rem;
-  font-weight: 600;
-  line-height: 2.08rem;
-  transition: color 0.1s ease-in;
+.linkedArticle:nth-of-type(1)::before,
+.linkedArticle:nth-of-type(2)::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 0.1rem;
+  background-color: #e5e7eb;
+  right: -0.75rem;
+}
+.linkedArticle:nth-of-type(2) {
+  /* border-right: 0.1rem solid #e5e7eb; */
+  /* padding-right: 1rem; */
+  /* padding-left: 0; */
+}
+.linkedArticle:nth-of-type(3) {
+  /* padding-right: 0; */
 }
 .linkedArticle h3:nth-of-type(1) {
-  font-weight: 650;
+  font-size: 1.2rem;
+  font-weight: 600;
+  transition: color 0.1s ease-in;
+  margin-top: 0.5rem;
+}
+.linkedArticle h3:nth-of-type(2) {
+  font-weight: 600;
+  line-height: 1.3;
+  font-size: 1.4rem;
   margin: 0.25rem 0;
+  cursor: pointer;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 .linkedArticle h3:nth-of-type(2):hover {
-  color: rgba(51, 51, 51, 0.9);
+  color: rgb(75, 85, 99);
+}
+
+.linkedArticleSolo::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 0.1rem;
+  background-color: #e5e7eb;
+  left: -0.75rem;
 }
