--- a/src/components/HomeMain/HomeMain.module.css
+++ b/src/components/HomeMain/HomeMain.module.css
@@ -76,6 +76,7 @@
 .mainBoxImg {
   width: 100%;
   height: 50%;
+  position: relative;
 }
 
 .mainBoxBig .mainBoxImg {
@@ -84,6 +85,14 @@
 
 .mainBoxBig {
   position: relative;
+}
+.mainBoxImg a i {
+  /* bottom: -20%; */
+  position: absolute;
+  bottom: 0.7rem;
+  right: 0.7rem;
+  color: #fff;
+  font-size: 1.5rem;
 }
 
 .mainBoxBig .mainBoxHeader {
@@ -94,8 +103,11 @@
 
 .mainBoxBig .mainBoxHeader h3:nth-of-type(1) {
   font-size: 1.3rem;
+  font-size: 1.2rem;
 }
-
+.mainBoxBig .mainBoxHeader h3:nth-of-type(2) {
+  font-weight: 600;
+}
 .mainBoxBig .mainBoxHeader h3:nth-of-type(2) a {
   text-decoration: none;
   color: inherit;
@@ -109,6 +121,7 @@
   position: absolute;
   display: flex;
   height: 30%;
+  height: 50%;
   background-color: black;
   background: rgb(0, 0, 0);
   background: linear-gradient(
