--- a/src/components/Login/LoginForm.module.css
+++ b/src/components/Login/LoginForm.module.css
@@ -114,7 +114,7 @@
 #remember a:hover {
   color: rgba(37, 99, 235, 0.8);
 }
-#loginForm button[type='submit'] {
+#loginForm button[type="submit"] {
   margin-top: 2rem;
   background-color: #2563eb;
   border: none;
@@ -124,6 +124,17 @@
   cursor: pointer;
   width: 100%;
 }
-#loginForm button[type='submit']:hover {
+#loginForm button[type="submit"]:hover {
   background-color: #1d4ed8;
+}
+#error {
+  color: #3b82f6;
+  width: 100%;
+  font-size: 1.5rem;
+  margin-bottom: 2rem;
+  padding-left: 1.5rem;
+}
+#error h3 {
+  text-align: left;
+  font-weight: 400;
 }
