--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -35,6 +35,7 @@
   display: flex;
   justify-content: center;
   font-size: 1.7rem;
+  font-size: 1.6rem;
   align-items: center;
   margin-right: 2rem;
   cursor: pointer;
