--- a/src/components/UserComment/UserComment.module.css
+++ b/src/components/UserComment/UserComment.module.css
@@ -22,6 +22,10 @@
 .commentHeaderSecond h4 {
   font-weight: 600;
 }
+.commentHeaderSecond p a {
+  text-decoration: none;
+  color: rgba(107, 114, 128, 1);
+}
 .commentHeaderSecond h4:hover,
 .commentHeaderSecond p:hover {
   text-decoration: underline;
