--- a/src/components/comment/CommentItem.module.css
+++ b/src/components/comment/CommentItem.module.css
@@ -38,6 +38,7 @@
 .commentHeaderSecond h4 {
   font-weight: 600;
   text-align: left;
+  width: fit-content;
 }
 .commentHeaderSecond h4:hover {
   text-decoration: underline;
@@ -49,8 +50,13 @@
   font-size: 1.2rem;
   position: absolute;
   bottom: 0;
-  width: 100%;
+  width: fit-content;
   color: rgba(107, 114, 128, 1);
+}
+.commentHeaderSecond p a,
+.commentHeaderSecond h4 a {
+  text-decoration: none;
+  color: inherit;
 }
 .commentHeaderSecond p:hover {
   text-decoration: underline;
@@ -86,33 +92,39 @@
 .dislike i {
   color: rgba(241, 88, 79, 0.8);
 }
+.reportLikeParent {
+  display: flex;
+}
+.divide {
+  width: 0.1rem;
+  height: 100%;
+  background-color: #e5e7e5;
+}
 .report {
-  border-right: 0.1rem solid #e5e7e5;
+  /* border-right: 0.1rem solid #e5e7e5; */
   font-size: 1.4rem;
-  padding-right: 2rem;
+  margin-right: 2rem;
   color: #545a64;
+  cursor: pointer;
 }
 .report i {
   font-size: 1rem;
   margin-right: 0.5rem;
-  cursor: pointer;
 }
 .report p {
-  cursor: pointer;
   display: inline-block;
 }
 .reply {
-  padding-left: 2rem;
+  margin-left: 2rem;
   font-size: 1.4rem;
   color: #545a64;
+  cursor: pointer;
 }
 .reply i {
   font-size: 1rem;
   margin-right: 0.5rem;
-  cursor: pointer;
 }
 .reply p {
-  cursor: pointer;
   display: inline-block;
 }
 .topComment {
