--- a/src/components/comment/CommentShow.module.css
+++ b/src/components/comment/CommentShow.module.css
@@ -10,6 +10,17 @@
   cursor: pointer;
   margin-left: 1.6rem;
 }
+
 .showCommentMore {
   margin-left: 0rem;
+  text-align: center;
+}
+.showAll {
+  background-color: #9ca3af;
+  margin-left: 0rem;
+  color: #fff;
+  transition: background-color 0.2s ease-in;
+}
+.showAll:hover {
+  background-color: #6b7280;
 }
