--- a/src/components/AdminPanel/EditArticle/EditArticle.module.css
+++ b/src/components/AdminPanel/EditArticle/EditArticle.module.css
@@ -152,8 +152,10 @@
   grid-template-columns: 72.5% 27.5%;
   gap: 0.1rem;
   border: 0.1rem solid #e5e7eb;
+  border-left: 0.1rem solid transparent;
+  border-right: 0.1rem solid transparent;
   height: 20.4rem;
-  border-right: 0.1rem solid #e5e7eb;
+  /* border-right: 0.1rem solid #e5e7eb; */
   overflow: hidden;
 }
 
@@ -162,6 +164,8 @@
   display: grid;
   gap: 0.1rem;
   grid-template-columns: repeat(4, 1fr);
+  border-right: 0.1rem solid #e5e7eb;
+  border-left: 0.1rem solid #e5e7eb;
 }
 .subLeftItem {
   background-color: #fff;
@@ -221,11 +225,13 @@
   margin-right: 0.25rem;
 }
 .subRight {
-  border-left: 0.1rem solid #e5e7eb;
+  /* border-left: 0.1rem solid #e5e7eb; */
   display: grid;
-  gap: 0.1rem;
+  gap: 0.25rem;
   grid-template-rows: repeat(2, 1fr);
   text-align: left;
+  border-right: 0.1rem solid #e5e7eb;
+  margin-right: 0.1rem;
 }
 .subRightItem {
   padding: 0.8rem;
@@ -276,7 +282,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: 0.1rem solid #e5e7eb;
+  /* border: 0.1rem solid #e5e7eb; */
+  border-left: 0.1rem solid #e5e7eb;
+  border-right: 0.1rem solid #e5e7eb;
   height: 100%;
 }
 .addArticleLeft {
@@ -445,5 +453,18 @@
 .emptySub {
   background-color: #fff;
   border-left: 0.1rem solid #e5e7eb;
+  border-right: 0.1rem solid #e5e7eb;
+}
+
+.subRight .emptySub:nth-of-type(1),
+.subRight .addArticle:nth-of-type(1) {
+  border-bottom: 0.1rem solid #e5e7eb;
+  border-right: 0.1rem solid #e5e7eb;
+  margin-right: 0.1rem;
+}
+.subRight .emptySub:nth-of-type(2),
+.subRight .addArticle:nth-of-type(2) {
+  border-top: 0.1rem solid #e5e7eb;
+  margin-right: 0.1rem;
   border-right: 0.1rem solid #e5e7eb;
 }
