--- a/src/components/Article/LinkedArticles.module.css
+++ b/src/components/Article/LinkedArticles.module.css
@@ -46,7 +46,11 @@
   text-overflow: ellipsis;
   overflow: hidden;
 }
-.linkedArticle h3:nth-of-type(2):hover {
+.linkedArticle h3:nth-of-type(2) a {
+  text-decoration: none;
+  color: inherit;
+}
+.linkedArticle h3:nth-of-type(2):hover a {
   color: rgb(75, 85, 99);
 }
 
