--- a/src/components/Article/LinkedPromo.module.css
+++ b/src/components/Article/LinkedPromo.module.css
@@ -22,14 +22,18 @@
 .promoItem h3:nth-of-type(1) {
   font-size: 1.2rem;
 }
-.promoItem h3:nth-of-type(2) {
+.promoItem h3:nth-of-type(2) a {
   font-size: 1.3rem;
   font-weight: 600;
   cursor: pointer;
   transition: color 0.1s ease-in;
 }
-.promoItem h3:nth-of-type(2):hover {
+.promoItem h3:nth-of-type(2) a:hover {
   color: rgba(51, 51, 51, 0.7);
+}
+.promoItem h3:nth-of-type(2) a {
+  text-decoration: none;
+  color: inherit;
 }
 .promoBody {
   display: flex;
