--- a/src/components/ArticleLink/ArticleLink.module.css
+++ b/src/components/ArticleLink/ArticleLink.module.css
@@ -1,5 +1,6 @@
 #articleLinkImage img {
-  width: 100%;
+  max-width: 100% !important;
+  min-width: 8rem;
   height: 100%;
 }
 #articleLink {
@@ -8,11 +9,16 @@
   border: 0.1rem solid #e5e7eb;
   border-radius: 0.3rem;
   padding: 1rem;
-  padding-bottom: 1.5rem;
+  /* padding-bottom: 1.5rem; */
   cursor: pointer;
   margin-top: 1rem;
   transition: background-color 0.2s ease-in;
   margin-bottom: 1rem;
+  display: flex;
+  width: 90%;
+}
+#articleLink a {
+  text-decoration: none;
 }
 #articleLink:hover {
   background-color: #f8f8f8;
@@ -24,17 +30,19 @@
   float: left;
   display: inline;
 }
+
 #articleLinkText {
   font-size: 1.4rem;
-  line-height: 2.5rem;
+  line-height: 2.24rem;
   color: #333;
   width: 100%;
   grid-column: 1/-1;
+  font-weight: 400;
   display: inline;
 }
 #articleLinkText h3:first-of-type {
   font-size: 1.25rem;
 }
 #articleLinkText h3:nth-of-type(2) {
-  font-weight: 700;
+  font-weight: 500;
 }
