--- a/src/components/HomeSub/HomeSub.module.css
+++ b/src/components/HomeSub/HomeSub.module.css
@@ -35,7 +35,7 @@
 
 #subBodyHeader h3 {
   cursor: pointer;
-  font-size: 1.8rem;
+  font-size: 1.5rem;
   font-weight: normal;
 }
 
@@ -61,22 +61,43 @@
   background-color: #fff;
   padding: 0.8rem;
   height: 100%;
-  cursor: pointer;
   display: flex;
   flex-direction: column;
 }
 
 .subBodyItem .itemText {
   font-size: 1.4rem;
-  line-height: 1.6rem;
   text-align: left;
 }
+.subBodyItem .itemText h3 a {
+  text-decoration: none;
+  color: inherit;
+}
 .subBodyItem .itemText h3:first-of-type {
-  margin: 0.3rem 0;
-  font-size: 1.3rem;
+  margin: 0.5rem 0 0.3rem;
+  font-size: 1.12rem;
 }
 .subBodyItem .itemText h3:nth-of-type(2) {
   margin-bottom: 2rem;
+  font-weight: 500;
+  font-size: 1.5rem;
+  color: #111827;
+}
+
+.itemImg {
+  height: 46%;
+  position: relative;
+}
+.itemImgFour {
+  height: 20rem;
+}
+
+.itemImg i {
+  position: absolute;
+  bottom: 0.7rem;
+  right: 0.7rem;
+  color: #fff;
+  font-size: 1.5rem;
 }
 
 .subBodyItem .itemBundle {
@@ -107,12 +128,21 @@
   display: flex;
   flex-direction: column;
   background-color: #fff;
+}
+.subBodyBundleItem h3:nth-of-type(1) {
+  font-size: 1.12rem;
+}
+
+.subBodyBundleItem h3:nth-of-type(2) {
+  font-size: 1.5rem;
+  font-weight: 500;
+  color: #111827;
   cursor: pointer;
 }
 
-.subBodyBundleItem h3 {
-  font-size: 1.5rem;
-  color: #333;
+.subBodyBundleItem h3:nth-of-type(2) a {
+  text-decoration: none;
+  color: inherit;
 }
 
 .subBodyBundleItem .itemBundle {
@@ -129,4 +159,48 @@
 .subBodyBundleItem .itemBundle .itemBundleRight span:first-of-type i,
 .subBodyBundleItem .itemBundle .itemBundleRight span:nth-of-type(2) i {
   margin-right: 0.5rem;
+}
+
+#promoCnt {
+  width: 1280px;
+  display: grid;
+  grid-gap: 0.1rem;
+  gap: 0.1rem;
+  /* grid-template-rows: 15% 90%; */
+  background-color: #e5e7eb;
+  margin: 2rem auto;
+  height: 100%;
+  border: 1px solid #e5e7eb;
+}
+#promoHeader {
+  grid-column: 1/-1;
+  grid-row: 1/2;
+  background-color: #fff;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 1rem;
+}
+#promoHeader span {
+  width: 1.25rem;
+  height: 1.25rem;
+  border-radius: 0.325rem;
+  background-color: #ef6f3e;
+  margin-right: 1rem;
+  margin-top: 0.2rem;
+}
+#promoHeader h3 {
+  cursor: pointer;
+  font-size: 1.5rem;
+  font-weight: normal;
+}
+#promoBody {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  text-align: left;
+  gap: 0.1rem;
+}
+#promoBody a {
+  text-decoration: none;
+  color: inherit;
 }
