--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -35,7 +35,7 @@
   display: flex;
   justify-content: center;
   font-size: 1.7rem;
-  font-size: 1.6rem;
+  font-size: 1.52rem;
   align-items: center;
   margin-right: 2rem;
   cursor: pointer;
@@ -46,6 +46,10 @@
   align-items: center;
   text-decoration: none;
   color: inherit;
+}
+
+#navHeader ul li:hover a {
+  text-decoration: underline;
 }
 
 #bundle {
