commit on 'main'

--- a/src/components/HomeMain/HomeMain.module.css
+++ b/src/components/HomeMain/HomeMain.module.css
@@ -47,6 +47,10 @@
 .mainBox .mainBoxHeader h3 a {
   text-decoration: none;
   color: inherit;
+  /* transition: color 0.1s ease-in; */
+}
+.mainBox .mainBoxHeader h3 a:hover {
+  color: rgba(75, 85, 99);
 }
 .mainBox .mainBoxHeader h3:nth-of-type(1) {
   font-size: 1.12rem;
@@ -111,7 +115,9 @@
   text-decoration: none;
   color: inherit;
 }
-
+.mainBoxBig .mainBoxHeader h3:nth-of-type(2) a:hover {
+  color: rgb(209, 213, 219);
+}
 .mainBoxBig {
   color: #fff;
 }
