--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -30,3 +30,27 @@
   color: rgb(107, 114, 128);
   font-size: 1.4rem;
 }
+@media only screen and (max-width: 768px) {
+  #footer nav ul {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    text-align: left;
+    margin-left: 4rem;
+  }
+  #footer nav ul li {
+    margin-bottom: 1rem;
+    cursor: pointer;
+  }
+  #footer #followUs {
+    font-size: 0;
+  }
+  #footer #cpr {
+    padding: 0 1rem 1rem;
+  }
+}
+@media only screen and (max-width: 300px) {
+  #footer #followUs i {
+    margin-right: 1.5rem;
+  }
+}
