--- a/src/components/HomeMain/HomeMain.module.css
+++ b/src/components/HomeMain/HomeMain.module.css
@@ -252,3 +252,89 @@
   justify-content: space-between;
   padding: 1rem 0 0;
 }
+@media only screen and (max-width: 768px) {
+  #homeMain {
+    width: 100% !important;
+    height: 167.8rem;
+  }
+  #main {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(24, 1fr);
+    width: 100% !important;
+  }
+  .mainBoxBig {
+    grid-row: 1/7;
+    grid-column: 1/-1;
+  }
+  .mainBox {
+    display: grid;
+    grid-row: span 3;
+    grid-template-columns: repeat(12, 1fr);
+    grid-auto-rows: 1fr;
+  }
+  .mainBoxImg {
+    grid-column: 1/4;
+    height: fit-content;
+    height: 100%;
+  }
+  .mainBoxHeader,
+  .mainBoxFooter {
+    grid-column: 4/-1;
+    grid-row: 1/2;
+  }
+  .mainBox .mainBoxHeader,
+  .mainBox .mainBoxFooter {
+    margin-left: 0.8rem;
+  }
+  .mainBoxHeader h3:nth-of-type(1) {
+    margin-top: 0 !important;
+  }
+}
+@media only screen and (max-width: 600px) {
+  #homeMain {
+    height: 155rem;
+  }
+}
+@media only screen and (max-width: 550px) {
+  #homeMain {
+    height: 150rem;
+  }
+}
+@media only screen and (max-width: 500px) {
+  #homeMain {
+    height: 140rem;
+  }
+}
+@media only screen and (max-width: 450px) {
+  #homeMain {
+    height: 125rem;
+  }
+  .mainBox .mainBoxHeader h3 {
+    font-size: 1.4rem;
+  }
+}
+@media only screen and (max-width: 400px) {
+  #homeMain {
+    height: 100rem;
+  }
+  .mainBox .mainBoxHeader h3 {
+    font-size: 1.3rem;
+  }
+}
+@media only screen and (max-width: 350px) {
+  #homeMain {
+    height: 90rem;
+  }
+  .mainBox .mainBoxHeader h3 {
+    font-size: 1.2rem;
+  }
+}
+@media only screen and (max-width: 1024px) {
+  #homeMain {
+    width: 100% !important;
+  }
+  #main {
+    /* grid-template-rows: repeat(24, 1fr); */
+    width: 100% !important;
+  }
+}
